feat: add mediaChannel definition
