# angular-hub/src/models/community.model.ts
@@ -1,10 +1,12 @@
 import { Event } from './event.model';
+import { MediaChannel } from './media-channel.model';
 
 export interface Community {
   name: string;
   type: 'workshop' | 'conference' | 'meetup' | 'other';
   location: string | null;
   url: string | null;
+  mediaChannel: MediaChannel | null;
   logo: string | null;
   twitter: string | null;
   linkedin: string | null;
