# angular-hub/src/server/schemas/community.schema.ts
@@ -6,6 +6,12 @@ export const CommunitySchema = object({
   type: picklist(['workshop', 'conference', 'meetup', 'other']),
   location: nullable(string()),
   url: nullable(string()),
+  mediaChannel: nullable(
+    object({
+      url: string(),
+      language: string(),
+    }),
+  ),
   logo: nullable(string()),
   twitter: nullable(string()),
   linkedin: nullable(string()),
